--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,  initial-scaled=1.0">
@@ -7,25 +8,33 @@
 		<title>varun</title>
 		<link rel="stylesheet" href="index.css">
 	</head>
-	<body>
-		<p>heloo</p>
-		<br>
-		<div id="links">
 
-			<div id="gitlab"><a href="https://gitlab.com/nairvarun">gitlab</a></div
-			><div id="gitlab_link"> --> [[gitlab.com/nairvarun]]</div>
+	<body>
+		
+		heloo
+	
+		<br><br>
+
+		<div>
+
+			<div id="name"><a href="https://gitlab.com/nairvarun">gitlab</a></div
+			><div id="redirect"> --> [[gitlab.com/nairvarun]]</div>
 			
 			<br>
 			
-			<div id="github"><a href="https://github.com/nairvarun">github</a></div
-			><div id="github_link"> --> [[github.com/nairvarun]]</div>
+			<div id="name"><a href="https://github.com/nairvarun">github</a></div
+			><div id="redirect"> --> [[github.com/nairvarun]]</div>
 			
 			<br>
 			
-			<div id="email"><a href="mailto:nairvarun@pm.me">email</a></div
-			><div id="email_address"> --> [[nairvarun@pm.me]]</div>
+			<div id="name"><a href="mailto:nairvarun@pm.me">email</a></div
+			><div id="redirect"> --> [[nairvarun@pm.me]]</div>
 
 		</div>
+
 	</body>
+
+
 	<script src="index.js"></script>
+
 </html>
