--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width,  initial-scaled=1.0">
+		<meta name="viewport" content="width=device-width,  initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>varun</title>
 		<link rel="stylesheet" href="index.css">
@@ -33,7 +33,6 @@
 		</div>
 
 	</body>
-
 
 	<script src="index.js"></script>
 
