new html and css

--- a/index.html
+++ b/index.html
@@ -9,27 +9,14 @@
 		<link rel="stylesheet" href="index.css">
 	</head>
 
-	<body>
-		
-		heloo
 	
-		<br><br>
+	<body>
 
-		<div>
-
-			<div id="name"><a href="https://gitlab.com/nairvarun">gitlab</a></div
-			><div id="redirect"> --> [[gitlab.com/nairvarun]]</div>
+		<div id='box'>
 			
+			<textarea resize placeholder="help --> [list of all commands]" rows="10" cols="50">info</textarea>
 			<br>
-			
-			<div id="name"><a href="https://github.com/nairvarun">github</a></div
-			><div id="redirect"> --> [[github.com/nairvarun]]</div>
-			
-			<br>
-			
-			<div id="name"><a href="mailto:nairvarun@pm.me">email</a></div
-			><div id="redirect"> --> [[nairvarun@pm.me]]</div>
-
+			aaa
 		</div>
 
 	</body>
