--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 
 		<div id='box'>
 			
-			<textarea resize placeholder="help --> [list of all commands]" rows="10" cols="50">info</textarea>
-			<br>
-			aaa
+			<textarea readonly placeholder="help --> [list of all commands]" rows="10" cols="50">info</textarea>
+
 		</div>
 
 	</body>
