p9-like site: functional

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,  initial-scale=1.0">
@@ -8,18 +7,24 @@
 		<title>varun</title>
 		<link rel="stylesheet" href="index.css">
 	</head>
-
-	
 	<body>
-
-		<div id='box'>
-			
-			<textarea readonly placeholder="help --> [list of all commands]" rows="10" cols="50">info</textarea>
-
+		<div class="heading">
+			<h1 id="heading__box">&nbsp</h1>
+			<h1 id="heading__name">usr/varun-nair/</h1>
 		</div>
-
+		<br>
+		<div class="content">
+			<div class="content__link" data-redirect=" --> [[gitlab.com/nairvarun]]"><a href="https://gitlab.com/nairvarun">gitlab/</a></div>
+			<br>
+			<div class="content__link" data-redirect=" --> [[github.com/nairvarun]]"><a href="https://github.com/nairvarun">github/</a></div>
+			<br>
+			<div class="content__link" data-redirect=" --> [[linkedin.com/in/nair-varun]]"><a href="https://www.linkedin.com/in/nair-varun">linkedin/</a></div>
+			<br>
+			<div class="content__link" data-redirect=" --> [[twitter.com/_nv04]]"><a href="https://twitter.com/_nv04">twitter/</a></div>
+			<br>
+			<!-- TODO: add custom dialog box for email -->
+			<div class="content__link" data-redirect=" --> [[nairvarun@pm.me]]"><a id="email-redirect">email/</a></div>
+		</div>
 	</body>
-
 	<script src="index.js"></script>
-
 </html>
