--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width,  initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>varun</title>
-		<link rel="stylesheet" href="index.css">
+		<link rel="stylesheet" href="./index.css">
 	</head>
 	<body>
 		<div class="heading">
@@ -26,5 +26,5 @@
 			<div class="content__link" data-redirect=" --> [[nairvarun@pm.me]]"><a id="email-redirect">email/</a></div>
 		</div>
 	</body>
-	<script src="index.js"></script>
+	<script src="./index.js"></script>
 </html>
