full pg textarea dn command recongnition and execution logic

--- a/src/html/nerd-mode.html
+++ b/src/html/nerd-mode.html
@@ -8,14 +8,7 @@
 		<link rel="stylesheet" href="../css/nerd-mode.css">
 	</head>
 	<body>
-		<div class="heading">
-			<h1 id="heading__box">&nbsp</h1>
-			<h1 id="heading__name">usr/varun-nair/nerd-mode</h1>
-		</div>
-		<br>
-		<div class="term">
-            <textarea id="term__term" cols="60" rows="15" spellcheck="false" autofocus="true"></textarea>
-        </div>
+		<textarea id="text-area" placeholder="%" spellcheck="false" autofocus="true"></textarea>
 	</body>
 	<script src="../js/nerd-mode.js"></script>
 </html>	
