--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 		</div>
 		<br>
 		<div class="content">
-			<div class="content__link" data-redirect=" --> [[gitlab.com/nairvarun]]"><a href="https://gitlab.com/nairvarun">gitlab/</a></div>
+			<div class="content__link"><a href="https://gitlab.com/nairvarun">gitlab/</a></div>
 			<br>
-			<div class="content__link" data-redirect=" --> [[github.com/nairvarun]]"><a href="https://github.com/nairvarun">github/</a></div>
+			<div class="content__link"><a href="https://github.com/nairvarun">github/</a></div>
 			<br>
-			<div class="content__link" data-redirect=" --> [[linkedin.com/in/nair-varun]]"><a href="https://www.linkedin.com/in/nair-varun">linkedin/</a></div>
+			<div class="content__link"><a href="https://www.linkedin.com/in/nair-varun">linkedin/</a></div>
 			<br>
-			<div class="content__link" data-redirect=" --> [[twitter.com/_nv04]]"><a href="https://twitter.com/_nv04">twitter/</a></div>
+			<div class="content__link"><a href="https://twitter.com/_nv04">twitter/</a></div>
 			<br>
 			<!-- TODO: add custom dialog box for email -->
-			<div class="content__link" data-redirect=" --> [[nairvarun@pm.me]]"><a id="email-redirect">email/</a></div>
+			<div class="content__link"><a id="email-redirect">email/</a></div>
 		</div>
 	</body>
 	<script src="./index.js"></script>
