--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width,  initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>varun</title>
-		<link rel="stylesheet" href="./index.css">
+		<link rel="stylesheet" href="./css/index.css">
 	</head>
 	<body>
 		<div class="heading">
@@ -25,6 +25,9 @@
 			<!-- TODO: add custom dialog box for email -->
 			<div class="content__link"><a id="email-redirect">email/</a></div>
 		</div>
+		<div class="term">
+			<textarea id="term__text-area" spellcheck="false" autofocus="true" rows="17" cols="60"></textarea>
+		</div>
 	</body>
-	<script src="./index.js"></script>
+	<script type="module" src="./js/index.js"></script>
 </html>
