added custom context menu and fixed overflow issue for cmenu and term. also made term a pop up thing

--- a/html/index.html
+++ b/html/index.html
@@ -28,6 +28,10 @@
 		<div class="term">
 			<textarea id="term__text-area" spellcheck="false" autofocus="true" rows="17" cols="60"></textarea>
 		</div>
+		<div class="custom-cm">
+			<div class="custom-cm__item">term</div>
+			<div class="custom-cm__item">help</div>
+		</div>
 	</body>
 	<script type="module" src="./js/index.js"></script>
 </html>
