removed module from script tag

--- a/html/index.html
+++ b/html/index.html
@@ -34,5 +34,5 @@
         </div>
     </div>
 </body>
-<script type="module" src="./js/index.js"></script>
+<script src="./js/index.js"></script>
 </html>
