website now has a much simpler ui

--- a/html/old.html
+++ b/html/old.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/index.css">
-    <title>varun</title>
+    <link rel="stylesheet" href="../css/old.css">
+    <title>old site</title>
 </head>
 <body>
     <div class="acme-container">
@@ -34,5 +34,5 @@
         </div>
     </div>
 </body>
-<script src="./js/index.js"></script>
+<script src="../js/old.js"></script>
 </html>
