--- a/html/index.html
+++ b/html/index.html
@@ -14,9 +14,9 @@
     ---------
            \   ^__^
             \  (oo)\_______
-               (__)\       )\/<a href="./html/old.html" id="old-site-link">\</a>
+               (__)\       )\/\
                    ||----w |
-                   ||     ||
+                   ||     |<a href="./html/old.html" id="old-site-link">|</a>
 
 
 </pre>
@@ -25,7 +25,7 @@
         <summary>who am i?</summary>
         <ul>
             <li>name: varun nair <br></li>
-            <li>education: vit bhopal ('25) <a href="https://vitbhopal.ac.in/">↗</a></li>
+            <li>education: btech [vit bhopal ('25)<a href="https://vitbhopal.ac.in/">↗</a></li>]
         </ul>
     </details>
     <br><br>
