--- a/html/index.html
+++ b/html/index.html
@@ -25,7 +25,7 @@
         <summary>who am i?</summary>
         <ul>
             <li>name: varun nair <br></li>
-            <li>education: btech [vit bhopal ('25)<a href="https://vitbhopal.ac.in/">↗</a></li>]
+            <li>education: btech [vit bhopal ('25)<a href="https://vitbhopal.ac.in/">↗</a>]</li>
         </ul>
     </details>
     <br><br>
