--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
     <details>
         <summary>who am i?</summary>
         <ul>
-            <li>name: varun nair <br></li>
+            <li>name: varun nair</li><<br>>
             <li>education: btech [vit bhopal ('25)<a href="https://vitbhopal.ac.in/">↗</a>]</li>
         </ul>
     </details>
