--- a/html/index.html
+++ b/html/index.html
@@ -25,23 +25,23 @@
         <summary>who am i?</summary>
         <ul>
             <li>name: varun nair</li><br>
-            <li>education: btech [vit bhopal ('25)<a href="https://vitbhopal.ac.in/">↗</a>]</li>
+            <li>education: btech [vit bhopal ('25)<a href="https://vitbhopal.ac.in/" target="_blank">↗</a>]</li>
         </ul>
     </details>
     <br><br>
     <details>
         <summary>work</summary>
         <ul>
-            <li>gitlab: <a href="https://gitlab.com/nairvarun">nairvarun</a></li><br>
-            <li>github: <a href="https://github.com/nairvarun">nairvarun</a></li>
+            <li>gitlab: <a href="https://gitlab.com/nairvarun" target="_blank">nairvarun</a></li><br>
+            <li>github: <a href="https://github.com/nairvarun" target="_blank">nairvarun</a></li>
         </ul>
     </details>
     <br><br>
     <details>
         <summary>contact</summary>
             <ul>
-                <li>twitter: <a href="https://twitter.com/_nv04">@_nv04</a></li><br>
-                <li>linkedin: <a href="https://www.linkedin.com/in/nair-varun">nair-varun</a></li><br>
+                <li>twitter: <a href="https://twitter.com/_nv04" target="_blank">@_nv04</a></li><br>
+                <li>linkedin: <a href="https://www.linkedin.com/in/nair-varun" target="_blank">nair-varun</a></li><br>
                 <li>mail: <a href="mailto:nairvarun@pm.me">nairvarun@pm.me</a></li>
             </ul>
     </details>
