--- a/html/index.html
+++ b/html/index.html
@@ -25,7 +25,7 @@
         <summary>who am i?</summary>
         <ul>
             <li>name: varun nair</li><br>
-            <li>education: btech [vit bhopal ('25)<a href="https://vitbhopal.ac.in/" target="_blank">↗</a>]</li>
+            <li>education: btech [<a href="https://vitbhopal.ac.in/" target="_blank">vit bhopal ('25)</a>]</li>
         </ul>
     </details>
     <br><br>
