--- a/html/index.html
+++ b/html/index.html
@@ -32,15 +32,29 @@
 	<details>
 		<summary>work</summary>
 		<ul>
-			<li>gitlab: <a href="https://gitlab.com/nairvarun" target="_blank">nairvarun</a></li><br>
-			<li>github: <a href="https://github.com/nairvarun" target="_blank">nairvarun</a></li>
+			<li>
+				(personal (<a href="https://gitlab.com/nairvarun" target="_blank">(gitlab)</a> <a href="https://github.com/nairvarun" target="_blank">(github)</a>))
+			</li><!--<br> -->
+			<!-- <li> -->
+				<!-- sasd as dlkdnas [31232/3/12/12 - 32/2/12/12] -->
+				<!-- <ul class="work_done"> -->
+					<!-- <li>aaaasaas das aa</li> -->
+					<!-- <li>asbys ada sa as ds sdasudbsj</li> -->
+				<!-- </ul> -->
+			<!-- </li><br> -->
+			<!-- <li>dassa asd iasuhsas [2/213/132 - 213/231/123] -->
+				<!-- <ul class="work_done"> -->
+					<!-- <li>daskmdaas;dask dsakjd aada</li> -->
+					<!-- <li>daskmdaas;dask dsakjd aada</li> -->
+				<!-- </ul> -->
+			<!-- </li> -->
 		</ul>
 	</details>
 	<br><br>
 	<details>
 		<summary>contact</summary>
 			<ul>
-				<li>twitter: <a href="https://twitter.com/_nv04" target="_blank">@_nv04</a></li><br>
+				<!-- <li>twitter: <a href="https://twitter.com/_nv04" target="_blank">@_nv04</a></li><br> -->
 				<li>linkedin: <a href="https://www.linkedin.com/in/nair-varun" target="_blank">nair-varun</a></li><br>
 				<li>mail: <a href="mailto:nairvarun@pm.me">nairvarun@pm.me</a></li>
 			</ul>
