redir issue for old site

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-    <div id="name">varun nair<a href="./_old/acme.html" id="old-site-link">.</a></div>
+    <!-- todo: fix redir to old site -->
+    <!-- <div id="name">varun nair<a href="./_old/acme.html" id="old-site-link">.</a></div> -->
+    <div id="name">varun nair<a href="/">.</a></div>
     <div id="links"><a href="./cv.pdf" target="_blank">cv</a> | <a href="mailto:varun.nair2021@vitbhopal.ac.in" target="_blank">mail</a> | <a href="https://github.com/nairvarun" target="_blank">github</a></div>
     <br><br><br>
     <div id="info">
