--- a/index.html
+++ b/index.html
@@ -13,32 +13,39 @@
     <!-- todo: fix redir to old site -->
     <!-- <div id="name">varun nair<a href="./_old/acme.html" id="old-site-link">.</a></div> -->
     <div id="name">varun nair<a href="/">.</a></div>
-    <div id="links"><a href="./cv.pdf" target="_blank">cv</a> | <a href="mailto:varun.nair2021@vitbhopal.ac.in" target="_blank">mail</a> | <a href="https://github.com/nairvarun" target="_blank">github</a></div>
+
+    <div id="links"><a href="./cv.pdf" target="_blank">cv</a> | <a href="mailto:varun.nair2021@vitbhopal.ac.in"
+            target="_blank">mail</a> | <a href="https://github.com/nairvarun" target="_blank">github</a></div>
     <br><br><br>
+
     <div id="info">
         <details open>
-            <summary>about</summary>
+            <summary>education</summary>
             <ul>
-                <li>name: varun nair</li><br>
-                <li>education: btech computer science and engineering [<a href="https://vitbhopal.ac.in/" target="_blank">vit ('25)</a>]</li>
+                <li>b.tech: computer science and engineering [<a href="https://vitbhopal.ac.in/"
+                        target="_blank">vit</a>]</li>
             </ul>
         </details>
         <br><br>
+
         <details open>
-            <summary>work</summary>
+            <summary>experience</summary>
             <ul>
                 <li><a href="https://www.kavach.org.in/" target="_blank">kavachOS</a></li><br>
                 <li><a href="https://plypicker.vercel.app/" target="_blank">plypicker</a></li><br>
-                <li><a href="https://www.urabbo.com/" target="_blank">urabbo</a></li>
+                <!-- <li><a href="https://www.urabbo.com/" target="_blank">urabbo</a></li><br> -->
+                <li><a href="https://linktr.ee/cwcvitbhopal" target="_blank">cyber warriors club</a></li>
             </ul>
         </details>
         <br><br>
+
         <details open>
-            <summary>contact</summary>
+            <summary>links</summary>
             <ul>
                 <li>github: <a href="https://github.com/nairvarun" target="_blank">nairvarun</a></li><br>
                 <li>linkedin: <a href="https://www.linkedin.com/in/nair-varun" target="_blank">nair-varun</a></li><br>
-                <li>mail: <a href="mailto:varun.nair2021@vitbhopal.ac.in" target="_blank">varun.nair2021@vitbhopal.ac.in</a></li>
+                <li>mail: <a href="mailto:varun.nair2021@vitbhopal.ac.in"
+                        target="_blank">varun.nair2021@vitbhopal.ac.in</a></li>
             </ul>
         </details>
         <br><br>
