--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <ul>
                 <li><a href="https://www.kavach.org.in/" target="_blank">kavachOS</a></li><br>
                 <li><a href="https://plypicker.vercel.app/" target="_blank">plypicker</a></li><br>
-                <!-- <li><a href="https://www.urabbo.com/" target="_blank">urabbo</a></li><br> -->
+                <li><a href="https://www.urabbo.com/" target="_blank">urabbo</a></li><br>
                 <li><a href="https://linktr.ee/cwcvitbhopal" target="_blank">cyber warriors club</a></li>
             </ul>
         </details>
