--- a/index.html
+++ b/index.html
@@ -2,55 +2,50 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./index.css">
-    <title>varun nair</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="./index.css">
+	<script src="./index.js"></script>
+	<title>varun nair</title>
 </head>
 
 <body>
-    <!-- todo: fix redir to old site -->
-    <!-- <div id="name">varun nair<a href="./_old/acme.html" id="old-site-link">.</a></div> -->
-    <div id="name">varun nair<a href="/">.</a></div>
+	<!-- todo: fix redir to old site -->
+	<!-- <div id="name">varun nair<a href="./_old/acme.html" id="old-site-link">.</a></div> -->
+	<div id="name">varun nair<a href="/">.</a></div>
 
-    <div id="links"><a href="./cv.pdf" target="_blank">cv</a> | <a href="mailto:varun.nair2021@vitbhopal.ac.in"
-            target="_blank">mail</a> | <a href="https://github.com/nairvarun" target="_blank">github</a></div>
-    <br><br><br>
+	<!-- todo: update cv -->
+	<div id="links"><a href="./cv.pdf" target="_blank">cv</a> | <a href="mailto:varun.nair2021@vitbhopal.ac.in"
+			target="_blank">mail</a> | <a href="https://github.com/nairvarun" target="_blank">github</a></div>
+	<br><br><br>
 
-    <div id="info">
-        <details open>
-            <summary>education</summary>
-            <ul>
-                <li>b.tech: computer science and engineering [<a href="https://vitbhopal.ac.in/"
-                        target="_blank">vit</a>]</li>
-            </ul>
-        </details>
-        <br><br>
-
-        <details open>
-            <summary>experience</summary>
-            <ul>
-                <li><a href="https://www.kavach.org.in/" target="_blank">kavachOS</a></li><br>
-                <li><a href="https://plypicker.vercel.app/" target="_blank">plypicker</a></li><br>
-                <li><a href="https://www.urabbo.com/" target="_blank">urabbo</a></li><br>
-                <li><a href="https://linktr.ee/cwcvitbhopal" target="_blank">cyber warriors club</a></li>
-            </ul>
-        </details>
-        <br><br>
-
-        <details open>
-            <summary>links</summary>
-            <ul>
-                <li>github: <a href="https://github.com/nairvarun" target="_blank">nairvarun</a></li><br>
-                <li>linkedin: <a href="https://www.linkedin.com/in/nair-varun" target="_blank">nair-varun</a></li><br>
-                <li>mail: <a href="mailto:varun.nair2021@vitbhopal.ac.in"
-                        target="_blank">varun.nair2021@vitbhopal.ac.in</a></li>
-            </ul>
-        </details>
-        <br><br>
-    </div>
+	<div id="info">
+		<details open>
+			<summary>education</summary>
+			<ul>
+				<li>b.tech: computer science and engineering [<a href="https://vitbhopal.ac.in/"
+						target="_blank">vit</a>]</li>
+			</ul>
+		</details><br><br>
+		<details open>
+			<summary>experience</summary>
+			<ul>
+				<li><a href="https://plypicker.vercel.app/" target="_blank">plypicker</a></li><br>
+				<li><a href="https://www.kavach.org.in/" target="_blank">kavachOS</a></li><br>
+				<!-- <li><a href="https://www.urabbo.com/" target="_blank">urabbo</a></li><br> -->
+				<li><a href="https://linktr.ee/cwcvitbhopal" target="_blank">cyber warriors club</a></li>
+			</ul>
+		</details><br><br>
+		<details open>
+			<summary>links</summary>
+			<ul>
+				<li><a href="https://github.com/nairvarun" target="_blank">github</a></li><br>
+				<li><a href="https://www.linkedin.com/in/nair-varun" target="_blank">linkedin</a></li><br>
+				<li><a href="mailto:varun.nair2021@vitbhopal.ac.in" target="_blank">mail</a></li>
+			</ul>
+		</details><br><br>
+	</div>
 </body>
-<script src="./index.js"></script>
 
 </html>
