--- a/index.html
+++ b/index.html
@@ -24,19 +24,20 @@
 		<details open>
 			<summary>education</summary>
 			<ul>
-				<li>b.tech: computer science and engineering [<a href="https://vitbhopal.ac.in/"
-						target="_blank">vit</a>]</li>
+				<li>b.tech: cse [<a href="https://vitbhopal.ac.in/" target="_blank">@vit</a>]</li>
 			</ul>
-		</details><br><br>
+		</details>
+		<br><br>
 		<details open>
-			<summary>experience</summary>
+			<summary>work</summary>
 			<ul>
-				<li><a href="https://plypicker.vercel.app/" target="_blank">plypicker</a></li><br>
-				<li><a href="https://www.kavach.org.in/" target="_blank">kavachOS</a></li><br>
+				<li>full stack dev [<a href="https://plypicker.vercel.app/" target="_blank">@plypicker</a>]</li><br>
+				<li>software dev [<a href="https://www.kavach.org.in/" target="_blank">@kavachOS</a>]</li>
 				<!-- <li><a href="https://www.urabbo.com/" target="_blank">urabbo</a></li><br> -->
-				<li><a href="https://linktr.ee/cwcvitbhopal" target="_blank">cyber warriors club</a></li>
+				<!-- <li><a href="https://linktr.ee/cwcvitbhopal" target="_blank">cyber warriors club</a></li> -->
 			</ul>
-		</details><br><br>
+		</details>
+		<br><br>
 		<details open>
 			<summary>links</summary>
 			<ul>
@@ -44,7 +45,8 @@
 				<li><a href="https://www.linkedin.com/in/nair-varun" target="_blank">linkedin</a></li><br>
 				<li><a href="mailto:varun.nair2021@vitbhopal.ac.in" target="_blank">mail</a></li>
 			</ul>
-		</details><br><br>
+		</details>
+		<br><br>
 	</div>
 </body>
 
