--- a/index.html
+++ b/index.html
@@ -11,40 +11,49 @@
 </head>
 
 <body>
-	<div id="name">varun nair<a href="/">.</a></div>
-	
-	<div id="links"><a href="./cv.pdf" target="_blank">cv</a> | <a href="mailto:varun.nair2021@vitbhopal.ac.in"
-			target="_blank">mail</a> | <a href="https://github.com/nairvarun" target="_blank">github</a></div>
-	<br><br><br>
+	<div id="name">varun-nair</div>
 
+	<div id="links"><a href="./cv.pdf" target="_blank">cv</a>
+		| <a href="mailto:varun.nair2021@vitbhopal.ac.in" target="_blank">mail</a>
+		| <a href="https://github.com/nairvarun" target="_blank">github</a>
+		| <a class="work_in_progress">oybt</a></div>
+
+	<br><br>
+	<hr><br><br>
 	<div id="info">
+
 		<details open>
-			<summary>education</summary>
+			<summary>education/</summary>
 			<ul>
 				<li>b.tech: cse [<a href="https://vitbhopal.ac.in/" target="_blank">@vit</a>]</li>
 			</ul>
 		</details>
+
 		<br><br>
+
 		<details open>
-			<summary>work</summary>
+			<summary>work/</summary>
 			<ul>
-				<li>full stack dev [<a href="https://plypicker.vercel.app/" target="_blank">@plypicker</a>]</li><br>
+				<li>full stack dev [<a href="https://plypicker.vercel.app/" target="_blank">@plypicker</a>]</li>
 				<li>software dev [<a href="https://www.kavach.org.in/" target="_blank">@kavachOS</a>]</li>
 				<!-- <li><a href="https://www.urabbo.com/" target="_blank">urabbo</a></li><br> -->
 				<!-- <li><a href="https://linktr.ee/cwcvitbhopal" target="_blank">cyber warriors club</a></li> -->
 			</ul>
 		</details>
+
 		<br><br>
+
 		<details open>
-			<summary>links</summary>
+			<summary>links/</summary>
 			<ul>
-				<li><a href="https://github.com/nairvarun" target="_blank">github</a></li><br>
-				<li><a href="https://www.linkedin.com/in/nair-varun" target="_blank">linkedin</a></li><br>
+				<li><a href="https://www.linkedin.com/in/nair-varun" target="_blank">linkedin</a></li>
+				<li><a href="https://github.com/nairvarun" target="_blank">github</a></li>
 				<li><a href="mailto:varun.nair2021@vitbhopal.ac.in" target="_blank">mail</a></li>
 			</ul>
 		</details>
-		<br><br>
+
 	</div>
+	<br><br><hr>
 </body>
 
 </html>
