--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<div id="name">varun-nair</div>
 
-	<div id="links"><a href="./cv.pdf" target="_blank">cv</a>
+	<div id="links"><a href="./varun-nair.pdf" target="_blank">cv</a>
 		| <a href="mailto:varun.nair2021@vitbhopal.ac.in" target="_blank">mail</a>
 		| <a href="https://github.com/nairvarun" target="_blank">github</a>
 		| <a class="work_in_progress">oybt</a></div>
