--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./index.css">
 	<script src="./index.js"></script>
+	<!-- rm next line -->
+	<!-- <script src="./404.js"></script> -->
 	<title>varun nair</title>
 </head>
 
