--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<summary>work/</summary>
 			<ul>
 				<li>full stack dev [<a href="https://plypicker.vercel.app/" target="_blank">@plypicker</a>]</li>
-				<li>software dev [<a href="https://www.kavach.org.in/" target="_blank">@kavachOS</a>]</li>
+				<li>python dev [<a href="https://www.kavach.org.in/" target="_blank">@kavachOS</a>]</li>
 				<!-- <li><a href="https://www.urabbo.com/" target="_blank">urabbo</a></li><br> -->
 				<!-- <li><a href="https://linktr.ee/cwcvitbhopal" target="_blank">cyber warriors club</a></li> -->
 			</ul>
