--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div id="links"><a href="./varun-nair.pdf" target="_blank">cv</a>
 		| <a href="mailto:varun.nair2021@vitbhopal.ac.in" target="_blank">mail</a>
 		| <a href="https://github.com/nairvarun" target="_blank">github</a>
-		| <a class="work_in_progress">oybt</a></div>
+		<!-- | <a class="work_in_progress">oybt</a></div> -->
 
 	<br><br>
 	<hr><br><br>
