--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
 	<div id="name">varun-nair</div>
 
 	<div id="links"><a href="./varun-nair.pdf" target="_blank">cv</a>
-		| <a href="mailto:varun.nair2021@vitbhopal.ac.in" target="_blank">mail</a>
+		| <a href="mailto:varun.nair2021@vitbhopal.ac.in" target="_blank">email</a>
 		| <a href="https://github.com/nairvarun" target="_blank">github</a>
-		<!-- | <a class="work_in_progress">oybt</a></div> -->
+		| <a href="https://www.linkedin.com/in/nair-varun" target="_blank">linkedin</a>
+	</div>
 
-	<br><br>
-	<hr><br><br>
+	<br><hr><br><br>
 	<div id="info">
-
 		<details open>
 			<summary>education/</summary>
 			<ul>
@@ -29,31 +28,19 @@
 			</ul>
 		</details>
 
-		<br><br>
+		<br>
 
 		<details open>
 			<summary>work/</summary>
 			<ul>
-				<li>full stack dev [<a href="https://plypicker.vercel.app/" target="_blank">@plypicker</a>]</li>
+				<li>full stack [<a href="https://plypicker.vercel.app/" target="_blank">@plypicker</a>]</li>
 				<li>python dev [<a href="https://www.kavach.org.in/" target="_blank">@kavachOS</a>]</li>
-				<!-- <li><a href="https://www.urabbo.com/" target="_blank">urabbo</a></li><br> -->
-				<!-- <li><a href="https://linktr.ee/cwcvitbhopal" target="_blank">cyber warriors club</a></li> -->
 			</ul>
 		</details>
 
 		<br><br>
 
-		<details open>
-			<summary>links/</summary>
-			<ul>
-				<li><a href="https://www.linkedin.com/in/nair-varun" target="_blank">linkedin</a></li>
-				<li><a href="https://github.com/nairvarun" target="_blank">github</a></li>
-				<li><a href="mailto:varun.nair2021@vitbhopal.ac.in" target="_blank">mail</a></li>
-			</ul>
-		</details>
-
-	</div>
-	<br><br><hr>
+	</div><hr>
 </body>
 
 </html>
