--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <details open>
       <summary>work</summary>
       <ul>
-        <li>full stack [<a href="https://plypicker.vercel.app/" target="_blank">@plypicker</a>]</li>
+        <li>full stack [<a href="https://plypicker.com/" target="_blank">@plypicker</a>]</li>
         <li>python dev [<a href="https://www.kavach.org.in/" target="_blank">@kavachOS</a>]</li>
       </ul>
     </details>
