--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <details open>
     <summary>links</summary>
     <ul>
-      <li><a href="./varun-nair.pdf" target="_blank">cv</a></li>
+      <li><a href="./resume-varun_nair.pdf" target="_blank">resume</a></li>
       <li><a href="mailto:varun.nair2021@vitbhopal.ac.in" target="_blank">email</a></li>
       <li><a href="https://github.com/nairvarun/" target="_blank">github</a></li>
       <li><a href="https://www.linkedin.com/in/nair-varun/" target="_blank">linkedin</a></li>
