--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <details open>
       <summary>links</summary>
       <ul>
-        <li><a href="./resume-varun_nair.pdf" target="_blank">resume</a></li>
+        <li><a href="./resume.pdf" target="_blank">resume</a></li>
         <li><a href="mailto:nairvarun104@gmail.com" target="_blank">email</a></li>
         <li><a href="https://github.com/nairvarun/" target="_blank">github</a></li>
         <li><a href="https://www.linkedin.com/in/nair-varun/" target="_blank">linkedin</a></li>
