update kavach link

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <summary>work</summary>
       <ul>
         <li>data engineer [<a href="https://plypicker.com/" target="_blank">@plypicker</a>]</li>
-        <li>python dev [<a href="https://www.kavach.org.in/" target="_blank">@kavachOS</a>]</li>
+        <li>python dev [<a href="https://project-k-official.github.io/" target="_blank">@kavachOS</a>]</li>
       </ul>
     </details>
 
