--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     work
     <ul>
-      <li>sde [<a href="https://www.hyperface.co/" target="_blank">@hyperface</a>]*</li>
-      <li>data engineer [<a href="https://plypicker.com/" target="_blank">@plypicker</a>]</li>
+      <li>devops [<a href="https://www.hyperface.co/" target="_blank">@hyperface</a>]*</li>
+      <li>full stack [<a href="https://plypicker.com/" target="_blank">@plypicker</a>]</li>
       <li>python dev [<a href="https://project-k-official.github.io/" target="_blank">@kavachOS</a>]</li>
     </ul><br>
 
